--- a/package.json
+++ b/package.json
@@ -13,20 +13,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "pre-commit": "lint-staged"
+    "precommit": "lint-staged"
   },
-  "pre-commit": [
-    "pre-commit"
-  ],
   "lint-staged": {
-    "*.js": [
+    "*.{js,json,css,md}": [
       "prettier --write",
       "git add"
     ]
   },
   "devDependencies": {
+    "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
-    "pre-commit": "^1.2.2",
     "prettier": "^1.13.7"
   }
 }
