--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "react-smooth-marquee": "^1.0.0"
+    "react-smooth-marquee": "^1.0.0",
+    "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
     "start": "react-scripts start",
