--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "*",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-konami-code": "^1.2.0",
     "react-scripts": "1.1.4",
     "react-smooth-marquee": "^1.0.0",
     "semantic-ui-react": "^0.82.5"
