--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "boxicons": "^2.1.2",
     "express": "*",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
