--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.4.0",
     "react-konami-code": "^1.2.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.7",
     "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
