--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@mobiscroll/react-lite": "^4.10.9",
-    "boxicons": "^2.1.2",
+    "bootstrap": "^5.2.2",
+    "boxicons": "^2.1.4",
     "express": "*",
     "react": "^16.4.1",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-buttons": "^1.0.0",
     "react-dom": "^16.4.1",
+    "react-fb-image-grid": "^0.1.5",
     "react-icons": "^4.4.0",
     "react-konami-code": "^1.2.0",
     "react-scripts": "^5.0.1",
