--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-konami-code": "^1.2.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
+    "react-youtube-embed": "^1.0.3",
     "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
